<resources>
    <string name="app_name">KroquiApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="new_account">Create a Account</string>
    <string name="title_activity_projects">ActivityProjects</string>
    <string name="title_activity_project">ActivityProject</string>
    <string name="activeWithIdLicense">Active License ID</string>
    <string name="help">Help</string>
    <string name="createAccount">Create Account</string>
    <string name="liConcordo">I read and</string>
    <string name="btnPolitica">Polyci Privacy</string>
    <string name="passAgain">Password Again</string>
    <string name="insertpass">Enter a password. At least 8 characters.</string>
    <string name="city">City</string>
    <string name="stated">Stated</string>
    <string name="country">Country</string>
    <string name="whereare">Where you are from?</string>
    <string name="inst">Company / Institution</string>
    <string name="prof">Profession</string>
    <string name="profissional">Professional data</string>
    <string name="email">Email</string>
    <string name="bithDay">Birthday</string>
    <string name="generusM">Male</string>
    <string name="generusF">Female</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="dadosPessoa">Personal Data</string>
    <string name="errorCampoBranco">Empty fields</string>
    <string name="paraAcessar">Fill out the form correctly to use the DownApp.</string>

    <string name="biologo">Biologist</string>
    <string name="botanico">Botanist</string>
    <string name="ecologo">Ecologist</string>
    <string name="engAmbiental">Environmental engineer</string>
    <string name="engAgricola">Agricultural Engineer</string>
    <string name="engAgonomo">Agronomist Engineer</string>
    <string name="engFlorestal">Forestry Engineer</string>
    <string name="engCivil">Civil engineer</string>
    <string name="estudannte">Student</string>
    <string name="geografo">Geographer</string>
    <string name="gestorAmbiental">Environmental manager</string>
    <string name="oceanografo">Oceanographer</string>
    <string name="professor">Teacher</string>
    <string name="tecAgricola">Agricultural Technician</string>
    <string name="tecAgronomo">Technician in Agronomy</string>
    <string name="tecMeioAmabiente">Environmental technician</string>
    <string name="outros">Others</string>
    <string name="selectProfission">Select a job</string>
    <string name="registrese">Register</string>
    <string name="ative">Actived</string>
    <string name="createProject">Create Project</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="projectName">Project Name</string>
    <string name="discription">Description</string>
    <string name="delete">Delete</string>
    <string name="deleteProject">Delete Project</string>
    <string name="MsnDeleteProject">You are deleting the project</string>
    <string name="deleting">Deleting ...</string>
    <string name="projectDescription">Project description</string>
    <string name="ok">Ok</string>
    <string name="editProject">Editar Project</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_store" translatable="false">ActivityStore</string>
    <string name="title_activity_store_layers" translatable="false">ActivityStoreLayers</string>
    <string name="title_activity_store_details" translatable="false">ActivityStoreDetails</string>
    <string name="identification">IDENTIFICATION</string>
    <string name="date">Date</string>
    <string name="edition">Edition</string>
    <string name="series">Series</string>
    <string name="abstract1">Abstract</string>
    <string name="objective">Objective</string>
    <string name="credits">Credits</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="subcategories">Subcategories</string>
    <string name="thereError">There was an error while trying to display the data</string>
    <string name="noConnect">No internet connection</string>
    <string name="region">Region</string>
    <string name="africa">Africa</string>
    <string name="asia">Asia</string>
    <string name="australia">Australia</string>
    <string name="europe">Europe</string>
    <string name="north_america">North America</string>
    <string name="south_america">South America</string>
</resources>
