<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="10dp"
    android:orientation="vertical">
        <EditText
            android:id="@+id/nameProject"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:hint="@string/projectName"
            android:inputType="text" />
        <TextView
            android:text="Máximo 20 caracteres."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" />
        <EditText
            android:id="@+id/descProject"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:singleLine="false"
            android:hint="@string/discription"
            android:inputType="text" />
        <TextView
            android:text="Máximo 100 caracteres."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/btnCreate"
            android:text="@string/create"
            android:layout_marginTop="10dp"
            style="@style/Widget.AppCompat.Button.Colored"/>
</LinearLayout>
