<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#00ffffff" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <FrameLayout
            android:id="@+id/contLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_logo_black_72x67"
                tools:ignore="ContentDescription" />

            <ProgressBar
                android:id="@+id/progressBar3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"/>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/contForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_logo_kroqui"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/nameUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_background_white_border"
                android:hint="@string/user"
                android:inputType="text"
                android:padding="15dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_background_white_border"
                android:hint="@string/pass"
                android:inputType="textWebPassword"
                android:padding="15dp" />

            <Button
                android:id="@+id/btnLogar"
                android:background="@drawable/riple_rect_black_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/log_in"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/btnNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/riple_rect_btn_black"
                android:padding="5dp"
                android:text="@string/new_account"
                android:textColor="@color/blackText" />

            <TextView
                android:layout_marginTop="20dp"
                android:textSize="11sp"
                android:gravity="center"
                android:text="&#x00A9; 2018 AYGUS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
