<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityStoreLayers"
    tools:showIn="@layout/activity_store_layers">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/queries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/nTotalLayers"
                    android:text="231 camanda encontradas"
                    style="@style/subTitleTopStyle"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
                    android:background="@drawable/riple_rect_default"/>

                <TextView
                    android:text="@string/category"
                    style="@style/titleQueries" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"/>

                <TextView
                    android:text="@string/subcategories"
                    style="@style/titleQueries" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerTags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/region"
                    style="@style/titleQueries" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                </LinearLayout>

                <ProgressBar
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </FrameLayout>

        </android.support.v7.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp">

            <ProgressBar
                android:id="@+id/progStoreLayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerViewLayers"
                android:padding="6dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
            </android.support.v7.widget.RecyclerView>
        </FrameLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>